✨ add JWT tokens, implement login & register
