# internal/users/routes.go
@@ -4,5 +4,6 @@ import "github.com/gorilla/mux"
 
 func RegisterUsersRoutes(r *mux.Router) {
 	r.HandleFunc("", GetUsersHandler).Methods("GET")
-	r.HandleFunc("", CreateUserHandler).Methods("POST")
+	r.HandleFunc("/register", RegisterHandler).Methods("POST")
+	r.HandleFunc("/login", LoginHandler).Methods("POST")
 }
